# oldfashiond

./: .gitignore  LICENSE  README.md  gifmake.py  optional-requirements.txt  pyproject.toml
.github/workflows/: python-package.yml
src/oldfashiond/: __init__.py  __main__.py  args.py  oldfashiond.py  subs.py
