[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oldfashiond"
version = "0.0.1"
authors = [
  { name="Robin Ekman", email="robin.seth.ekman@gmail.com" },
]
description = "Two-pass gif encoding using ffmpeg"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rsekman/oldfashiond"
"Bug Tracker" = "https://github.com/rsekman/oldfashiond/issues"
